VolTextLib/target/generated-sources/antlr4/antlr/VolTextParser.java
// Generated from VolText.g4 by ANTLR 4.4

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VolTextParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__46=1, T__45=2, T__44=3, T__43=4, T__42=5, T__41=6, T__40=7, T__39=8, 
		T__38=9, T__37=10, T__36=11, T__35=12, T__34=13, T__33=14, T__32=15, T__31=16, 
		T__30=17, T__29=18, T__28=19, T__27=20, T__26=21, T__25=22, T__24=23, 
		T__23=24, T__22=25, T__21=26, T__20=27, T__19=28, T__18=29, T__17=30, 
		T__16=31, T__15=32, T__14=33, T__13=34, T__12=35, T__11=36, T__10=37, 
		T__9=38, T__8=39, T__7=40, T__6=41, T__5=42, T__4=43, T__3=44, T__2=45, 
		T__1=46, T__0=47, NOTVAL=48, UNIT=49, FORMATVAL=50, ORIENTATION=51, TXTATF=52, 
		COLORVAL=53, ALIGNVAL=54, TFVAL=55, POSVAL=56, NVAL=57, ENDLINE=58, ENDNLINE=59, 
		O=60, A=61, C=62, STRING=63, WS=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'height'", "'RECTANGLE'", "'img'", "'id:'", "'colorT-bullet:'", 
		"'font-family-otf:'", "'item:'", "'oob:'", "'stylesheet'", "'ordered:'", 
		"'list'", "'color-bullet:'", "'underline:'", "'color:'", "'fit-y'", "'pos-x'", 
		"'format:'", "'italics:'", "'orientation:'", "'p_width'", "'shape:\"'", 
		"'title:'", "'TRIANGLE'", "'angle-rotation'", "'page'", "'position:'", 
		"'URL:'", "'colorT:'", "':'", "'CIRCLE'", "'width'", "'font-family-ttf:'", 
		"'bullet:'", "'string:'", "'font-family:'", "'@'", "'text'", "'pos-y'", 
		"'fit-x'", "'div'", "'font-size:'", "'author:'", "'alignment:'", "'path:'", 
		"'bold:'", "'cross-point:'", "'p_height'", "'-'", "UNIT", "FORMATVAL", 
		"ORIENTATION", "TXTATF", "COLORVAL", "ALIGNVAL", "TFVAL", "POSVAL", "NVAL", 
		"'\";'", "';'", "':{'", "'{'", "'}'", "STRING", "WS"
	};
	public static final int
		RULE_pdf = 0, RULE_pdfattr = 1, RULE_stylesheet = 2, RULE_element = 3, 
		RULE_attrStyle = 4, RULE_page = 5, RULE_pae = 6, RULE_div = 7, RULE_tvalue = 8, 
		RULE_figure = 9, RULE_elemd = 10, RULE_img = 11, RULE_imgattr = 12, RULE_imgElem = 13, 
		RULE_list = 14, RULE_listElem = 15, RULE_text = 16, RULE_txtattr = 17, 
		RULE_txtElem = 18, RULE_fitAttr = 19, RULE_imganumber = 20, RULE_idval = 21, 
		RULE_listattr = 22, RULE_txtval = 23, RULE_colorBullet = 24, RULE_color = 25, 
		RULE_positionv = 26, RULE_alignment = 27, RULE_pageattr = 28;
	public static final String[] ruleNames = {
		"pdf", "pdfattr", "stylesheet", "element", "attrStyle", "page", "pae", 
		"div", "tvalue", "figure", "elemd", "img", "imgattr", "imgElem", "list", 
		"listElem", "text", "txtattr", "txtElem", "fitAttr", "imganumber", "idval", 
		"listattr", "txtval", "colorBullet", "color", "positionv", "alignment", 
		"pageattr"
	};

	@Override
	public String getGrammarFileName() { return "VolText.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VolTextParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PdfContext extends ParserRuleContext {
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public StylesheetContext stylesheet() {
			return getRuleContext(StylesheetContext.class,0);
		}
		public TerminalNode C() { return getToken(VolTextParser.C, 0); }
		public List<PdfattrContext> pdfattr() {
			return getRuleContexts(PdfattrContext.class);
		}
		public TerminalNode A() { return getToken(VolTextParser.A, 0); }
		public PdfattrContext pdfattr(int i) {
			return getRuleContext(PdfattrContext.class,i);
		}
		public PdfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pdf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterPdf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitPdf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitPdf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PdfContext pdf() throws RecognitionException {
		PdfContext _localctx = new PdfContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pdf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(A);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__25) | (1L << T__5) | (1L << T__3))) != 0)) {
				{
				{
				setState(59); pdfattr();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_la = _input.LA(1);
			if (_la==T__38) {
				{
				setState(65); stylesheet();
				}
			}

			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68); page();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__22 );
			setState(73); match(C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PdfattrContext extends ParserRuleContext {
		public TerminalNode ENDNLINE() { return getToken(VolTextParser.ENDNLINE, 0); }
		public TerminalNode STRING() { return getToken(VolTextParser.STRING, 0); }
		public PdfattrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pdfattr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterPdfattr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitPdfattr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitPdfattr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PdfattrContext pdfattr() throws RecognitionException {
		PdfattrContext _localctx = new PdfattrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pdfattr);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case T__25:
				enterOuterAlt(_localctx, 1);
				{
				setState(75); match(T__25);
				setState(76); match(STRING);
				setState(77); match(ENDNLINE);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); match(T__5);
				setState(79); match(STRING);
				setState(80); match(ENDNLINE);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81); match(T__3);
				setState(82); match(STRING);
				setState(83); match(ENDNLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StylesheetContext extends ParserRuleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TerminalNode O() { return getToken(VolTextParser.O, 0); }
		public TerminalNode C() { return getToken(VolTextParser.C, 0); }
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitStylesheet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitStylesheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stylesheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(T__38);
			setState(87); match(O);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(88); element();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94); match(C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public AttrStyleContext attrStyle(int i) {
			return getRuleContext(AttrStyleContext.class,i);
		}
		public TerminalNode O() { return getToken(VolTextParser.O, 0); }
		public TerminalNode STRING() { return getToken(VolTextParser.STRING, 0); }
		public TerminalNode C() { return getToken(VolTextParser.C, 0); }
		public List<AttrStyleContext> attrStyle() {
			return getRuleContexts(AttrStyleContext.class);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(T__11);
			setState(97); match(STRING);
			setState(98); match(O);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__46) | (1L << T__42) | (1L << T__41) | (1L << T__39) | (1L << T__37) | (1L << T__35) | (1L << T__34) | (1L << T__33) | (1L << T__32) | (1L << T__31) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__27) | (1L << T__26) | (1L << T__23) | (1L << T__21) | (1L << T__19) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__12) | (1L << T__9) | (1L << T__8) | (1L << T__6) | (1L << T__4) | (1L << T__2) | (1L << T__1) | (1L << T__0))) != 0)) {
				{
				{
				setState(99); attrStyle();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105); match(C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrStyleContext extends ParserRuleContext {
		public TerminalNode ENDNLINE() { return getToken(VolTextParser.ENDNLINE, 0); }
		public TerminalNode COLORVAL() { return getToken(VolTextParser.COLORVAL, 0); }
		public TerminalNode ENDLINE() { return getToken(VolTextParser.ENDLINE, 0); }
		public TerminalNode POSVAL() { return getToken(VolTextParser.POSVAL, 0); }
		public TerminalNode NOTVAL() { return getToken(VolTextParser.NOTVAL, 0); }
		public TerminalNode TFVAL() { return getToken(VolTextParser.TFVAL, 0); }
		public TerminalNode ALIGNVAL() { return getToken(VolTextParser.ALIGNVAL, 0); }
		public TerminalNode FORMATVAL() { return getToken(VolTextParser.FORMATVAL, 0); }
		public TerminalNode STRING() { return getToken(VolTextParser.STRING, 0); }
		public TerminalNode UNIT() { return getToken(VolTextParser.UNIT, 0); }
		public TerminalNode NVAL() { return getToken(VolTextParser.NVAL, 0); }
		public TerminalNode ORIENTATION() { return getToken(VolTextParser.ORIENTATION, 0); }
		public AttrStyleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrStyle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterAttrStyle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitAttrStyle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitAttrStyle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrStyleContext attrStyle() throws RecognitionException {
		AttrStyleContext _localctx = new AttrStyleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attrStyle);
		int _la;
		try {
			setState(187);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(T__1);
				setState(108); match(NVAL);
				setState(109); match(ENDNLINE);
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				setState(110); match(T__26);
				setState(111);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__45) | (1L << T__24) | (1L << T__17))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(112); match(ENDLINE);
				}
				break;
			case T__32:
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				_la = _input.LA(1);
				if ( !(_la==T__32 || _la==T__8) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(114); match(T__18);
				setState(115); match(TFVAL);
				setState(116); match(ENDNLINE);
				}
				break;
			case T__31:
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				_la = _input.LA(1);
				if ( !(_la==T__31 || _la==T__9) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(118); match(T__18);
				setState(120);
				_la = _input.LA(1);
				if (_la==NOTVAL) {
					{
					setState(119); match(NOTVAL);
					}
				}

				setState(122); match(NVAL);
				setState(124);
				_la = _input.LA(1);
				if (_la==UNIT) {
					{
					setState(123); match(UNIT);
					}
				}

				setState(126); match(ENDNLINE);
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 5);
				{
				setState(127); match(T__23);
				setState(128); match(T__18);
				setState(130);
				_la = _input.LA(1);
				if (_la==NOTVAL) {
					{
					setState(129); match(NOTVAL);
					}
				}

				setState(132); match(NVAL);
				setState(133); match(ENDNLINE);
				}
				break;
			case T__46:
			case T__16:
				enterOuterAlt(_localctx, 6);
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==T__46 || _la==T__16) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(135); match(T__18);
				setState(136); match(NVAL);
				setState(138);
				_la = _input.LA(1);
				if (_la==UNIT) {
					{
					setState(137); match(UNIT);
					}
				}

				setState(140); match(ENDNLINE);
				}
				break;
			case T__27:
			case T__0:
				enterOuterAlt(_localctx, 7);
				{
				setState(141);
				_la = _input.LA(1);
				if ( !(_la==T__27 || _la==T__0) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(142); match(T__18);
				setState(143); match(NVAL);
				setState(144); match(ENDNLINE);
				}
				break;
			case T__37:
				enterOuterAlt(_localctx, 8);
				{
				setState(145); match(T__37);
				setState(146); match(TFVAL);
				setState(147); match(ENDNLINE);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 9);
				{
				setState(148); match(T__14);
				setState(149); match(STRING);
				setState(150); match(ENDNLINE);
				}
				break;
			case T__41:
			case T__15:
			case T__12:
				enterOuterAlt(_localctx, 10);
				{
				setState(151);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__41) | (1L << T__15) | (1L << T__12))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(152); match(STRING);
				setState(153); match(ENDNLINE);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 11);
				{
				setState(154); match(T__6);
				setState(155); match(NVAL);
				setState(156); match(ENDNLINE);
				}
				break;
			case T__34:
			case T__29:
			case T__2:
				enterOuterAlt(_localctx, 12);
				{
				setState(157);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__34) | (1L << T__29) | (1L << T__2))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(158); match(TFVAL);
				setState(159); match(ENDNLINE);
				}
				break;
			case T__42:
				enterOuterAlt(_localctx, 13);
				{
				setState(160); match(T__42);
				setState(161); match(STRING);
				setState(162); match(ENDNLINE);
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 14);
				{
				setState(163); match(T__35);
				setState(164); match(COLORVAL);
				setState(165); match(ENDNLINE);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 15);
				{
				setState(166); match(T__19);
				setState(167); match(STRING);
				setState(168); match(ENDNLINE);
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 16);
				{
				setState(169); match(T__33);
				setState(170); match(COLORVAL);
				setState(171); match(ENDNLINE);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 17);
				{
				setState(172); match(T__21);
				setState(173); match(POSVAL);
				setState(174); match(ENDNLINE);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 18);
				{
				setState(175); match(T__4);
				setState(176); match(ALIGNVAL);
				setState(177); match(ENDLINE);
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 19);
				{
				setState(178); match(T__28);
				setState(179); match(ORIENTATION);
				setState(180); match(ENDNLINE);
				}
				break;
			case T__39:
				enterOuterAlt(_localctx, 20);
				{
				setState(181); match(T__39);
				setState(182); match(TFVAL);
				setState(183); match(ENDNLINE);
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 21);
				{
				setState(184); match(T__30);
				setState(185); match(FORMATVAL);
				setState(186); match(ENDNLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public List<PageattrContext> pageattr() {
			return getRuleContexts(PageattrContext.class);
		}
		public PaeContext pae(int i) {
			return getRuleContext(PaeContext.class,i);
		}
		public TerminalNode O() { return getToken(VolTextParser.O, 0); }
		public TerminalNode C() { return getToken(VolTextParser.C, 0); }
		public PageattrContext pageattr(int i) {
			return getRuleContext(PageattrContext.class,i);
		}
		public List<PaeContext> pae() {
			return getRuleContexts(PaeContext.class);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); match(T__22);
			setState(190); match(O);
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__43) | (1L << T__39) | (1L << T__30) | (1L << T__28) | (1L << T__27) | (1L << T__0))) != 0)) {
				{
				{
				setState(191); pageattr();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__44) | (1L << T__36) | (1L << T__10) | (1L << T__7))) != 0)) {
				{
				{
				setState(197); pae();
				}
				}
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203); match(C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PaeContext extends ParserRuleContext {
		public ElemdContext elemd() {
			return getRuleContext(ElemdContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public PaeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pae; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterPae(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitPae(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitPae(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PaeContext pae() throws RecognitionException {
		PaeContext _localctx = new PaeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pae);
		try {
			setState(207);
			switch (_input.LA(1)) {
			case T__44:
			case T__36:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(205); elemd();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(206); div();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public List<ColorContext> color() {
			return getRuleContexts(ColorContext.class);
		}
		public List<FitAttrContext> fitAttr() {
			return getRuleContexts(FitAttrContext.class);
		}
		public List<IdvalContext> idval() {
			return getRuleContexts(IdvalContext.class);
		}
		public FitAttrContext fitAttr(int i) {
			return getRuleContext(FitAttrContext.class,i);
		}
		public ImganumberContext imganumber(int i) {
			return getRuleContext(ImganumberContext.class,i);
		}
		public PositionvContext positionv(int i) {
			return getRuleContext(PositionvContext.class,i);
		}
		public ColorContext color(int i) {
			return getRuleContext(ColorContext.class,i);
		}
		public List<ImganumberContext> imganumber() {
			return getRuleContexts(ImganumberContext.class);
		}
		public IdvalContext idval(int i) {
			return getRuleContext(IdvalContext.class,i);
		}
		public List<FigureContext> figure() {
			return getRuleContexts(FigureContext.class);
		}
		public FigureContext figure(int i) {
			return getRuleContext(FigureContext.class,i);
		}
		public List<ElemdContext> elemd() {
			return getRuleContexts(ElemdContext.class);
		}
		public List<PositionvContext> positionv() {
			return getRuleContexts(PositionvContext.class);
		}
		public TvalueContext tvalue(int i) {
			return getRuleContext(TvalueContext.class,i);
		}
		public List<TvalueContext> tvalue() {
			return getRuleContexts(TvalueContext.class);
		}
		public ElemdContext elemd(int i) {
			return getRuleContext(ElemdContext.class,i);
		}
		public TerminalNode O() { return getToken(VolTextParser.O, 0); }
		public TerminalNode C() { return getToken(VolTextParser.C, 0); }
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VolTextListener ) ((VolTextListener)listener).exitDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VolTextVisitor ) return ((VolTextVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}
